Fixed spacing on checkout.html

--- a/css/template-page.css
+++ b/css/template-page.css
@@ -29,8 +29,16 @@
 .product-list-container{
     background-color: #000000;
     color: #FFFFFF;
-    padding-bottom: 2.5rem;
-    padding: 2rem 7rem 2rem 7rem;
+    padding: 2rem 7rem 2.5rem 7rem;
+}
+
+.checkout-header-container{
+    padding: 8rem 7rem 0 7rem;
+    margin-bottom: 2rem;
+}
+
+.checkout-payment-container{
+    padding: 2rem 7rem 2.5rem 7rem;
 }
 
 /* Media Queries */
@@ -75,6 +83,14 @@
     }
 
     .product-list-container{
+        padding: 2rem 2rem 5rem 2rem;
+    }
+
+    .checkout-header-container{
+        padding: 8rem 2rem 0 2rem;
+    }
+
+    .checkout-payment-container{
         padding: 2rem 2rem 5rem 2rem;
     }
 }
